--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,13 @@ body{
   font-family: 'Spectral';
 }
 
+.App{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .headerName{
-  text-align: center;
   font-size: 1.5rem;
+  line-height: .2rem;
 } 
