--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,19 @@
 
 body{
   font-family: 'Spectral';
+  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" width="40" height="40"><rect x="0" y="0" width="40" height="40" stroke="white" stroke-opacity="0.1" stroke-width="0.935238" fill="black"></rect></svg>');
+
 }
 
 .App{
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: #0000;
 }
 
 .headerName{
   font-size: 1.5rem;
   line-height: .2rem;
 } 
+
