--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,15 @@ body{
   line-height: .2rem;
 } 
 
+
+
+.audio_button{
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  border: none;
+  background: none;
+  color: #ffff;
+}
