--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Spectral:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Spectral:wght@300&display=swap");
 
-body{
-  font-family: 'Spectral';
+body {
+  font-family: "Spectral";
   background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 40 40" width="40" height="40"><rect x="0" y="0" width="40" height="40" stroke="white" stroke-opacity="0.1" stroke-width="0.935238" fill="black"></rect></svg>');
-
 }
 
-.App{
+.App {
   display: flex;
   flex-direction: column;
   align-items: center;
   background: #0000;
 }
 
-.headerName{
+.headerName {
   font-size: 1.5rem;
-  line-height: .2rem;
-} 
+  line-height: 0.2rem;
+}
 
-
-
-.audio_button{
+.audio_button {
   position: absolute;
   bottom: 10px;
   right: 10px;
@@ -29,4 +26,24 @@ body{
   border: none;
   background: none;
   color: #ffff;
+  cursor: pointer;
+}
+
+.header{
+  display: flex;
+  justify-content: end;
+  
+}
+
+.logo{
+  position: absolute;
+  right: 10px;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  width: 3%;
+  cursor: pointer;
+}
+
+h2{
+  color: white;
 }
