--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,30 @@ body {
 h2{
   color: white;
 }
+
+
+/* chess profile */
+.avatar {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  background-color: #ffff;
+  margin: -30px;
+  transform: rotate(0deg) translate(70px) rotate(0deg);
+}
+
+.avatar:nth-child(2) {
+  transform: rotate(90deg) translate(70px) rotate(-90deg);
+}
+
+.avatar:nth-child(3) {
+  transform: rotate(180deg) translate(70px) rotate(0deg);
+}
+
+.avatar:nth-child(4) {
+  transform: rotate(-90deg) translate(70px) rotate(90deg);
+}
+
