--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ body {
 
 h2 {
   color: white;
+  font-family: monospace;
 }
 
 
@@ -101,18 +102,8 @@ h2 {
   border-radius: 5px;
 }
 
-.modal_playerName{
-
-}
-
 p{
+  font-size: medium;
   color: white;
+  font-family:monospace;
 }
-
-
-
-
-
-
-
-
