--- a/src/App.css
+++ b/src/App.css
@@ -65,20 +65,24 @@ h2 {
   height: 100px;
   border-radius: 50%;
   background-color: #ffff;
-  margin: -30px;
-  transform: rotate(0deg) translate(90px) rotate(0deg);   
+  margin: -50px;
+  transform: rotate(0deg) translate(100px) rotate(0deg);   
 }
 
 .avatar:nth-child(2) {
-  transform: rotate(90deg) translate(90px) rotate(-90deg); 
+  transform: rotate(60deg) translate(100px) rotate(-60deg); 
 }
 
 .avatar:nth-child(3) {
-  transform: rotate(180deg) translate(90px) rotate(0deg); 
+  transform: rotate(120deg) translate(100px) rotate(-120deg); 
 }
 
 .avatar:nth-child(4) {
-  transform: rotate(-90deg) translate(90px) rotate(90deg); 
+  transform: rotate(180deg) translate(100px) rotate(-180deg); 
+}
+
+.avatar:nth-child(5) {
+  transform: rotate(240deg) translate(100px) rotate(-240deg); 
 }
 
 .avatar img{
