--- a/src/App.css
+++ b/src/App.css
@@ -54,48 +54,38 @@ h2 {
 }
 
 /* CHESS PROFILE AVATARS */
-.avatar-container {
-  position: relative;
-  width: 500px;
-  height: 500px;
-  margin: 0 auto;
-}
-
 .avatar {
+  border-style: none;
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: 50%;
   width: 100px;
   height: 100px;
   border-radius: 50%;
   background-color: #ffff;
-  transform-origin: top left;
-}
-
-.avatar:nth-child(1) {
-  transform: translate(-50%, -50%);
+  margin: -50px;
+  transform: rotate(0deg) translate(200px) rotate(0deg);
 }
 
 .avatar:nth-child(2) {
-  transform: rotate(60deg) translate(120px) rotate(-60deg) translate(-50%, -50%);
+  transform: rotate(60deg) translate(150px) rotate(-60deg);
 }
 
 .avatar:nth-child(3) {
-  transform: rotate(120deg) translate(120px) rotate(-120deg) translate(-50%, -50%);
+  transform: rotate(120deg) translate(100px) rotate(-120deg);
 }
 
 .avatar:nth-child(4) {
-  transform: rotate(180deg) translate(120px) rotate(-180deg) translate(-50%, -50%);
+  transform: rotate(180deg) translate(200px) rotate(-180deg);
 }
 
 .avatar:nth-child(5) {
-  transform: rotate(240deg) translate(120px) rotate(-240deg) translate(-50%, -50%);
+  transform: rotate(90deg) translate(200px) rotate(270deg);
 }
 
 .avatar:nth-child(6) {
-  transform: rotate(300deg) translate(120px) rotate(-300deg) translate(-50%, -50%);
+  transform: rotate(240deg) translate(200px) rotate(-240deg);
 }
-
 
 .avatar img {
   border-radius: 50%;
