--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Spectral:wght@300&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&family=Spectral:wght@300&display=swap');
 
 body {
   font-family: "Spectral";
@@ -12,6 +13,16 @@ body {
   justify-content: center;
   align-items: center;
   background: #0000;
+}
+
+
+.heading{
+  text-align: center;
+  font-family: 'Poppins';
+  font-size:xx-large;
+}
+span{
+  color: #1cbb1c;
 }
 
 
@@ -171,27 +182,77 @@ hr {
   grid-template-columns: auto auto auto auto;
 }
 
-.AppDrawer{
+.AppDrawer {
+  background-color: #292828;
   position: fixed;
-  top: 80%;
-  left: 32%;
-  border: 2px solid #1cbb1c;
+  top: 87%;
+  left: 35%;
+  border: 2px solid #292828;
   border-radius: 50px;
-  width: 35%;
-  padding: .4%;
+  width: 30%;
+  padding: .1%;
 }
 
-.chessDrawer{
-  display: inline-block;
-  /* border: 2px solid tomato; */
+.iconList {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.iconList li {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 35px;
+  height: 35px;
   border-radius: 50%;
-  width: 50px;
-  padding: 5px;
+  border: 2px solid black;
+  background-color: #000000;
+  margin: 5px;
 }
 
-img{
+.iconList svg {
+  display: block;
+  margin: auto;
+}
+
+.photo-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+}
+
+.images {
+  max-width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border: 2px solid black;
+  border-radius: 10px;
   cursor: pointer;
 }
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000000b3;
+  backdrop-filter: blur(5px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.overlay img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+
+
 
 @media (max-width: 767px) {
   .rating {
