fixed the gallery

--- a/src/App.css
+++ b/src/App.css
@@ -270,4 +270,10 @@ hr {
     width: 70%;
 
   }
+
+  .photo-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+  }
 }
