fixed the gallery

--- a/src/App.css
+++ b/src/App.css
@@ -276,4 +276,8 @@ hr {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 10px;
   }
+
+  .AppDrawer {
+    top: 91%;
+  }
 }
