--- a/src/App.css
+++ b/src/App.css
@@ -74,28 +74,35 @@ h2 {
   height: 100px;
   border-radius: 50%;
   background-color: #ffff;
-  margin: -50px;
-  transform: rotate(0deg) translate(100px) rotate(0deg);
+  transform: translate(-50%, -50%);
 }
 
 .avatar:nth-child(2) {
-  transform: rotate(60deg) translate(100px) rotate(-60deg);
+  transform: rotate(60deg) translate(150px) rotate(-60deg) translate(-50%, -50%);
 }
 
 .avatar:nth-child(3) {
-  transform: rotate(120deg) translate(100px) rotate(-120deg);
+  transform: rotate(120deg) translate(150px) rotate(-120deg) translate(-50%, -50%);
 }
 
 .avatar:nth-child(4) {
-  transform: rotate(180deg) translate(100px) rotate(-180deg);
+  transform: rotate(180deg) translate(150px) rotate(-180deg) translate(-50%, -50%);
 }
 
 .avatar:nth-child(5) {
-  transform: rotate(90deg) translate(200px) rotate(270deg);
+  transform: rotate(240deg) translate(150px) rotate(-240deg) translate(-50%, -50%);
 }
 
 .avatar:nth-child(6) {
-  transform: rotate(240deg) translate(100px) rotate(-240deg);
+  transform: rotate(300deg) translate(150px) rotate(-300deg) translate(-50%, -50%);
+}
+
+.avatar:nth-child(7) {
+  transform: rotate(360deg) translate(150px) rotate(-360deg) translate(-50%, -50%);
+}
+
+.avatar:not(:last-child) {
+  margin-right: 20px;
 }
 
 .avatar img {
